--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   agora_rtc_engine: ^5.3.0
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
