--- a/Application-Challenge/junaya-ΩPaking/omega_paking/ios/Runner/Info.plist
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/ios/Runner/Info.plist
@@ -26,6 +26,17 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>CAMERA</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>MIC</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>voip</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
