--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   agora_rtc_engine: ^5.3.0
   permission_handler: ^10.0.0
+  provider: ^6.0.3
+  path: ^1.8.1
+  shared_preferences: ^2.0.15
+  intl: ^0.17.0
+  path_provider: ^2.0.11
+  animations: ^2.0.3
 
 dev_dependencies:
   flutter_test:
