--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.0.11
   animations: ^2.0.3
   http: ^0.13.5
+  im_flutter_sdk: ^3.9.4+2
 
 dev_dependencies:
   flutter_test:
