--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   path_provider: ^2.0.11
   animations: ^2.0.3
   http: ^0.13.5
+  lottie: ^1.4.1
+  flutter_svg: ^1.1.3
+  get_version: ^0.2.2
+  flutter_webview_plugin: ^0.4.0
+  connectivity: ^3.0.6
+  fluttertoast: ^8.0.9
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_test:
