--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -71,9 +71,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/jsons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
