feat: update audio effect

--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/jsons/
+    - assets/audios/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
