--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_svg: ^1.1.3
   connectivity: ^3.0.6
   fluttertoast: ^8.0.9
+  rive: ^0.9.1
 
 dev_dependencies:
   flutter_test:
