--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/icons/
     - assets/jsons/
     - assets/audios/
+    - assets/rives/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
