--- a/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
+++ b/Application-Challenge/junaya-ΩPaking/omega_paking/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   lottie: ^1.4.1
   flutter_svg: ^1.1.3
   connectivity: ^3.0.6
-  fluttertoast: ^8.0.9
   rive: ^0.9.1
   desktop_window: 
     git:
@@ -37,6 +36,7 @@ dependencies:
   styled_widget: ^0.4.0+3
   sized_context: ^1.0.0+1
   textstyle_extensions: ^1.1.0
+  bot_toast: ^4.0.3
 
 dev_dependencies:
   flutter_test:
